# CSCI-3132---OS32-Project-Summer-2015

./: .gitignore  CMakeLists.txt  CSCI3132-UtilitiesMain.cpp  Converter.cpp  Converter.h  FileSystem.cpp  FileSystem.h  Motd.cpp  Motd.txt  OS32Memory.cpp  OS32Memory.h  Palindrome.cpp  Utilities.cpp  Utilities.h  encryption.cpp  encryption.h  main.cpp  user-accounts.txt
header/: Converter.h  Motd.h  Palindrome.h  encryption.h
src/: Command.h  DCreate.cpp  FCreate.cpp  File.cpp  File.h  FileSystem.cpp  FileSystem.h  Fread&Fwrite.cpp  Fwrite.cpp  ListItems.cpp  OS32Memory.cpp  OS32Memory.h  Scheduler.h  helpme1.cpp  test_FS.cpp  test_memory.cpp
src/team2/: DCreate.cpp  FCreate.cpp  Fread.cpp  ListItems.cpp  chper.cpp
src/team3/: Login.cpp  Menu.cpp  Test.cpp
src/team4/: Converter.cpp  Motd.cpp  Utilities.cpp  encryption.cpp
ui/: Login.cpp  Menu.cpp  Menu.h  ReadMe! (Login file structure)  Test.cpp  UI.cpp  UI.h  parser.cpp  parser.h  test_ui.h
